--- a/src/styles/components/_loginPage.scss
+++ b/src/styles/components/_loginPage.scss
@@ -16,3 +16,22 @@
     left: 50%;
     transform:translate(-50%, -50%);
 }
+
+//***********************************************************//
+//                     Media Queries                         //
+//***********************************************************//
+@media screen and (max-width: 500px) {
+    #login-logo{
+        width: 40rem;
+        height: 20rem;
+    }
+
+    #intro {
+        font-size: 4rem;
+        margin: 7rem 1rem 0 1rem;
+    }
+
+    // #login-button {
+
+    // }
+}
