--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -27,6 +27,11 @@
     grid-template-columns: 7rem auto;
 }
 
+.modal-style p {
+    inline-size: 15rem; //very important to show the allowable size of the word
+    overflow-wrap: break-word;
+}
+
 .button-small {
     height: 2rem;
     width:4rem;
@@ -34,16 +39,3 @@
     padding:0.2rem 0.5rem;
     margin: 0.8rem 1rem 0 1rem;
 }
-
-
-// <Modal
-//           className="modal-style"
-//           isOpen={this.state.display}
-//         >
-//           <p>Description:&nbsp;{convertToSentenceCase(this.props.income.description)}</p>
-//           <p>Amount:&nbsp;{numeral(this.props.income.amount).format('$0,0[.]00')}</p>
-//           <p>Date:&nbsp;{time}</p>
-//           <p>Note:&nbsp;{this.props.income.note}</p>
-//           <Link to={`/editIncome/${this.props.income.id}`}><button className="button-small">Edit</button></Link>
-//           <button onClick={this.close} className="button-small">Close</button>
-//         </Modal>
