--- a/src/styles/components/_loginPage.scss
+++ b/src/styles/components/_loginPage.scss
@@ -22,16 +22,20 @@
 //***********************************************************//
 @media screen and (max-width: 500px) {
     #login-logo{
-        width: 40rem;
-        height: 20rem;
+        width: 22rem;
+        height: 10rem;
     }
 
     #intro {
-        font-size: 4rem;
+        font-size: 3rem;
         margin: 7rem 1rem 0 1rem;
     }
 
-    // #login-button {
-
-    // }
+    #login-button {
+        width: 20rem;
+        height: 8rem;
+        font-size: 2rem;
+        font-weight: 600;
+        padding: 0;
+    }
 }
