--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,12 +2,14 @@
     box-sizing: border-box;
 }
 
+
 body{
     background-color: $dark-purple;
     color: white;
     font-family: 'Noto Sans JP', sans-serif;
     font-weight: 300;
 }
+
 
 button {
     color: black;
@@ -16,13 +18,22 @@ button {
     border: transparent;
     border-radius: 4%;
     padding: 1rem 4rem;
+    -webkit-border-radius: 4%;
+    -moz-border-radius: 4%;
+    -ms-border-radius: 4%;
+    -o-border-radius: 4%;
 }
+
 
 button:hover {
     color: white;
     background-image: linear-gradient(to right, darken($pink,10), darken($pink, 10));
     transition: background-image 0.3s, color 0.3s;
     cursor: pointer;
+    -webkit-transition: background-image 0.3s, color 0.3s;
+    -moz-transition: background-image 0.3s, color 0.3s;
+    -ms-transition: background-image 0.3s, color 0.3s;
+    -o-transition: background-image 0.3s, color 0.3s;
 }
 
 //***********************************************************//
