--- a/src/styles/components/_incomesPage.scss
+++ b/src/styles/components/_incomesPage.scss
@@ -21,6 +21,10 @@
     font-size: 1.2rem;
     padding:0.6rem 2rem;
     margin-bottom: 0.5rem;
+    -webkit-border-radius:0;
+    -moz-border-radius:0;
+    -ms-border-radius:0;
+    -o-border-radius:0;
 }
 
 .records-subheading {
@@ -108,8 +112,4 @@
         margin:0;
     }
 
-    // .record-item > p {
-    //     margin-right: 1rem;
-    //     overflow: hidden;
-    // }
 }
