--- a/src/styles/components/_loginPage.scss
+++ b/src/styles/components/_loginPage.scss
@@ -15,6 +15,10 @@
     top: 60%;
     left: 50%;
     transform:translate(-50%, -50%);
+    -webkit-transform:translate(-50%, -50%);
+    -moz-transform:translate(-50%, -50%);
+    -ms-transform:translate(-50%, -50%);
+    -o-transform:translate(-50%, -50%);
 }
 
 //***********************************************************//
