--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -1,17 +1,3 @@
-// .ReactModal__Overlay {
-//     background-color: red;
-// } 
-
-// .ReactModal__Overlay--after-open {
-// }
-
-// .ReactModal__Content {
-//     background: black;
-// }
-
-// .ReactModal__Content--after-open {
-//     background: black;
-// } 
 .modal-style {
     position: absolute;
     top: 50%;
@@ -20,6 +6,10 @@
     color: white;
     background: black;
     padding: 2rem 3rem;
+    -webkit-transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    -o-transform: translate(-50%,-50%);
 }
 
 .modal-style > div {
