--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,83 +1,40 @@
-*{
+// font-family: 'Poppins', sans-serif; 3,4,6,7
+// font-family: 'Roboto', sans-serif;1,3,4,5,7
+* {
+    padding: 0;
+    margin:0;
     box-sizing: border-box;
 }
 
-
-body{
-    background-color: $dark-purple;
-    color: white;
-    font-family: 'Noto Sans JP', sans-serif;
-    font-weight: 300;
+body,html {
+    overflow-x: hidden;
 }
 
+body {
+    background-color: black;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+}
 
 button {
+    padding: 0.6rem 3rem;
+    background: linear-gradient(to right, #555, #999, #555); /* Complex gradient with different gray shades */
     color: black;
-    background-image: linear-gradient(to right, darken($pink,10), lighten($pink,10), $pink) ;
-    font-size: 1.5rem;
-    border: transparent;
-    border-radius: 4%;
-    padding: 1rem 4rem;
-    -webkit-border-radius: 4%;
-    -moz-border-radius: 4%;
-    -ms-border-radius: 4%;
-    -o-border-radius: 4%;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+    transition: background-color 0.3s, color 0.3s;
+    margin: 0 auto;
+    display: block;
+    font-family: 'Poppins', sans-serif;
 }
-
 
 button:hover {
+    background: linear-gradient(to right, #444, #888, #444); /* Slightly lighter gradient on hover */
     color: white;
-    background-image: linear-gradient(to right, darken($pink,10), darken($pink, 10));
-    transition: background-image 0.3s, color 0.3s;
-    cursor: pointer;
-    -webkit-transition: background-image 0.3s, color 0.3s;
-    -moz-transition: background-image 0.3s, color 0.3s;
-    -ms-transition: background-image 0.3s, color 0.3s;
-    -o-transition: background-image 0.3s, color 0.3s;
 }
 
-//***********************************************************//
-//                     Media Queries                         //
-//***********************************************************//
-@media screen and (max-width: 1300px) {
-    html {
-        font-size: 10px;
-    }
-}
-
-@media screen and (max-width: 930px) {
-    html {
-        font-size: 8px;
-    }
-}
-
-@media screen and (max-width: 730px) {
-    html {
-        font-size: 7px;
-    }
-}
-@media screen and (max-width: 650px) {
-    html {
-        font-size: 6.5px;
-    }
-}
-@media screen and (max-width: 600px) {
-    html {
-        font-size: 6px;
-    }
-}
-@media screen and (max-width: 550px) {
-    html {
-        font-size: 5.5px;
-    }
-}
-@media screen and (max-width: 500px) {
-    html {
-        font-size: 9px;
-    }
-
-    button {
-        font-size: 3rem;
-        padding: 2rem 8rem;
-    }
+img {
+    width: 10rem;
 }
