--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,74 +1,49 @@
-#header {
-    display: flex;
-    align-items: flex-end;
-    padding: 1rem 0 1rem 10rem;
-    background-color: darken($color: $dark-purple, $amount: 2);
-}
-
-.header-logo {
-    width: 16rem;
-    height: 8rem;
-}
-
 #header-nav {
-    margin-left: 5rem;
+    position: fixed;
+    z-index: 2;
+    bottom: 0;
+    width: 100vw;
+    display: flex;
+    padding: 0.5rem 0;
+    background-color: black;
+
+    >.nav {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        flex-basis: 0;
+        align-items: center;
+        color: white;
+        transition:0.5s;
+        -webkit-transition:0.5s;
+        -moz-transition:0.5s;
+        -ms-transition:0.5s;
+        -o-transition:0.5s;
+        text-decoration: none;
+
+        ion-icon: {
+            font-size: 1.2rem;
+        }
+
+        span {
+            font-size: 0.6rem;
+            font-weight: 100;
+        }
+    }
+
+    >.nav:hover {
+        transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        -moz-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -o-transform: scale(1.1);
 }
 
-.header-nav-item {
-    text-decoration: none;
-    color: white;
-    margin: 0 2rem;
-    font-size: 1.2rem;
-    font-weight: 100;
-}
-
-.header-nav-item:hover {
-    color: gray;
-    transition: color 0.5s;
-    -webkit-transition: color 0.5s;
-    -moz-transition: color 0.5s;
-    -ms-transition: color 0.5s;
-    -o-transition: color 0.5s;
-}
-
-.header-nav-item_active {
-    text-decoration: none;
-    color: $pink;
-    margin: 0 2rem;
-    font-size: 1.4rem;
-    font-weight: 100;
-    background-color:darken($color:$dark-purple,$amount: 3);
-    padding: 0.8rem;
-    transition: color 1s, background-color 1s;
-    -webkit-transition: color 1s, background-color 1s;
-    -moz-transition: color 1s, background-color 1s;
-    -ms-transition: color 1s, background-color 1s;
-    -o-transition: color 1s, background-color 1s;
-}
-
-//***********************************************************//
-//                     Media Queries                         //
-//***********************************************************//
-@media screen and (max-width: 500px) {
-    #header {
-        max-width: 100vw;
-        padding: 1rem 0 1rem 2rem;
-    }
-    
-    .header-logo {
-        height: 5rem;
-        width:12rem;
-    }
-    
-    #header-nav {
-        margin-left: 0;
-    }
-    
-    .header-nav-item {
-        margin: 0 0.5rem;
-    }
-    
     .header-nav-item_active {
-        margin: 0 0.5rem;
+        color: gray;
+
+        span {
+            font-weight: 300;
+        }
     }
 }
