--- a/src/styles/components/_loadingPage.scss
+++ b/src/styles/components/_loadingPage.scss
@@ -1,28 +1,28 @@
 #loading-page {
-    background-color :rgb(0,0,0,0);
-    height:100vh
+    height:100vh;
+    position:relative;
+
+    img {
+        width: 2rem;
+        height: 2rem;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        animation-name: shrinker;
+        animation-duration: 1.5s;
+        animation-iteration-count: infinite;
+        -webkit-transform: translate(-50%,-50%);
+        -moz-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+        -o-transform: translate(-50%,-50%);
+    }
 }
 
 
 @keyframes shrinker {
-    0% {width: 20rem; height: 10rem;}
-    50%{width: 10rem; height: 5rem;}
-    100%{width: 20rem; height: 10rem;}
+    50% {
+        width: 3rem;
+        height: 3rem;
+    }
 }
-
-#loading-logo {
-    width: 20rem;
-    height: 10rem;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    animation-name: shrinker;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    -webkit-transform: translate(-50%,-50%);
-    -moz-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    -o-transform: translate(-50%,-50%);
-}
-
