--- a/src/styles/components/_loginPage.scss
+++ b/src/styles/components/_loginPage.scss
@@ -1,45 +1,91 @@
-#login-logo {
-    display: block;
-    margin: 1rem auto;
+#login-page {
+    background-image: url('../Images/background.jpg'); //must be relative to the main style
+    height: 100vh;
+    overflow: hidden;
+    padding: 4rem 2rem;
+
+    >p:first-child {
+        font-size: 1.2rem;
+        text-align: center;
+        margin-bottom: 10vh;
+        transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+        -moz-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        -o-transform: translateY(-50%);
+        transition: transform 3s;
+        -webkit-transition: transform 3s;
+        -moz-transition: transform 3s;
+        -ms-transition: transform 3s;
+        -o-transition: transform 3s;
+}
+    >p:first-child.slide {
+        transform: translateY(0);
+        -webkit-transform: translateY(0);
+        -moz-transform: translateY(0);
+        -ms-transform: translateY(0);
+        -o-transform: translateY(0);
 }
 
-#intro {
-    font-family: 'La Belle Aurore', cursive;
-    margin-top: 3rem;
-    text-align: center;
-    font-size: 1.5rem;
+    >div:first-of-type {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img {
+            width: 10rem;
+            opacity: 0;
+            transition: 3s;
+            -webkit-transition: 3s;
+            -moz-transition: 3s;
+            -ms-transition: 3s;
+            -o-transition: 3s;
 }
 
-#login-button {
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform:translate(-50%, -50%);
-    -webkit-transform:translate(-50%, -50%);
-    -moz-transform:translate(-50%, -50%);
-    -ms-transform:translate(-50%, -50%);
-    -o-transform:translate(-50%, -50%);
-}
-
-//***********************************************************//
-//                     Media Queries                         //
-//***********************************************************//
-@media screen and (max-width: 500px) {
-    #login-logo{
-        width: 22rem;
-        height: 10rem;
+        img.visible {
+            opacity: 1;
+        }
     }
 
-    #intro {
-        font-size: 3rem;
-        margin: 7rem 1rem 0 1rem;
-    }
-
-    #login-button {
-        width: 20rem;
-        height: 8rem;
+    >p:nth-of-type(2) {
         font-size: 2rem;
-        font-weight: 600;
-        padding: 0;
+        text-align: center;
+        font-family: 'Poppins', sans-serif;
+        font-weight: 700;
+        position: relative;
+        top: -1.5rem;
+    }
+
+    >p:nth-of-type(3) {
+        font-style: italic;
+        text-align: center;
+        color: mintcream;
+        font-size: 0.9rem;
+        position: relative;
+        top: -1rem;
+        margin-bottom: 12vh;
+    }
+
+    @keyframes breathe {        
+        50% {
+            transform: scale(1.07);
+            -webkit-transform: scale(1.07);
+            -moz-transform: scale(1.07);
+            -ms-transform: scale(1.07);
+            -o-transform: scale(1.07);
+        }
+    }
+
+    button {
+        animation-name: breathe;
+        animation-duration: 3s;
+        animation-iteration-count: infinite;
     }
 }
+
+// @media only screen and (min-width:400px) {
+//     #login-page {
+//         font-size: 1.5rem;
+//     }
+// }
