--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -5,27 +5,39 @@
     transform: translate(-50%,-50%);
     color: white;
     background: black;
-    padding: 2rem 3rem;
+    width: 90%;
+    padding: 1rem;
     -webkit-transform: translate(-50%,-50%);
     -moz-transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
     -o-transform: translate(-50%,-50%);
-}
+    font-size: 0.8rem;
 
-.modal-style > div {
-    display: grid;
-    grid-template-columns: 7rem auto;
-}
+    >div{
+        display: grid;
+        grid-template-columns: 7rem auto;
+        margin-bottom: 0.5rem;
 
-.modal-style p {
-    inline-size: 15rem; //very important to show the allowable size of the word
-    overflow-wrap: break-word;
-}
+        p{
+            inline-size: 15rem; //very important to show the allowable size of the word
+            overflow-wrap: break-word;   
+        }
+    }
 
-.button-small {
-    height: 2rem;
-    width:4rem;
-    font-size: 1rem;
-    padding:0.2rem 0.5rem;
-    margin: 0.8rem 1rem 0 1rem;
+
+
+    >div:last-child{
+        display:flex;
+
+        .edit-detail {
+            text-decoration: none;
+        }
+    
+        button {
+            height: 1.5rem;
+            width:3rem;
+            padding:0.2rem 0.5rem;
+            margin: 0.8rem 1rem 0 1rem;
+        }
+    }
 }
