--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,6 +1,5 @@
 #header-nav {
     position: fixed;
-    z-index: 2;
     bottom: 0;
     width: 100vw;
     display: flex;
@@ -13,7 +12,7 @@
         flex: 1;
         flex-basis: 0;
         align-items: center;
-        color: white;
+        color: gray;
         transition:0.5s;
         -webkit-transition:0.5s;
         -moz-transition:0.5s;
@@ -21,7 +20,7 @@
         -o-transition:0.5s;
         text-decoration: none;
 
-        ion-icon: {
+        ion-icon {
             font-size: 1.2rem;
         }
 
@@ -37,13 +36,53 @@
         -moz-transform: scale(1.1);
         -ms-transform: scale(1.1);
         -o-transform: scale(1.1);
-}
+    }
 
     .header-nav-item_active {
-        color: gray;
+        color: white;
 
         span {
             font-weight: 300;
+        }
+    }
+}
+
+@media only screen and (min-width:769px) {
+    #header-nav {
+        position: absolute;
+        top: 1.5rem;
+        bottom: auto;
+        right: 8%;
+        width: 60%;
+
+        >.nav {
+            color: white;
+
+            ion-icon {
+                display: none;
+            }
+
+            span {
+                font-weight: 300;
+                font-size: 1rem;
+            }
+        }
+
+        >.nav:hover {
+            transform: scale(1.2);
+            -webkit-transform: scale(1.2);
+            -moz-transform: scale(1.2);
+            -ms-transform: scale(1.2);
+            -o-transform: scale(1.2);
+        }
+
+        .header-nav-item_active {
+            color: gray;
+    
+            span {
+                font-weight: 700;
+                font-size: 1.1rem;
+            }
         }
     }
 }
