--- a/src/styles/components/_helpPage.scss
+++ b/src/styles/components/_helpPage.scss
@@ -4,6 +4,10 @@
     font-size: 0.8rem; 
     color: whitesmoke;
 
+    img {
+        display: none;
+    }
+
 
     ul {
         list-style-type:circle;
@@ -22,9 +26,10 @@
         display: flex;
         align-items: flex-end;
         margin-bottom: 2rem;
+        max-width: 20rem;
         textarea {
-            height: 5rem;
-            width: 10rem;
+            height: 7rem;
+            width: 70%;
         }
 
         button {
@@ -37,6 +42,29 @@
     >div:last-child {
         margin-bottom: 5rem;
     }
+}
 
+@media only screen and (min-width:769px) {
+    #help-page {
+        img {
+            display: block;
+            width: 5rem;
+        }
 
+        h1,ul,p,div{
+            max-width: 40rem;
+            display: block;
+            margin: 1rem auto;
+        }
+
+        h1 {
+            margin: 2rem auto;
+        }
+
+        div:first-of-type {
+            width: 40rem;
+            min-width: 40rem;
+            margin: 1rem auto;
+        }
+    }
 }
