--- a/src/styles/components/_incomesPage.scss
+++ b/src/styles/components/_incomesPage.scss
@@ -2,9 +2,13 @@
     width: 90vw;
     height: auto;
     margin:0 auto;
+
+    img{
+        display: none;
+    }
+
     h2 {
         text-align: center;
-        // font-family: 'Poppins', sans-serif;
         padding: 0.5rem 0;
     }
 
@@ -92,6 +96,71 @@
                     text-align: right;
                     color: rgb(201, 200, 200);
                 }
+            }
+        }
+    }
+}
+
+@media only screen and (min-width:769px) {
+    .details-page {
+        img {
+            display: block;
+            width:5rem;
+        }
+
+        .records-list {
+            width: 70%;
+            display: block;
+            margin: 0 auto;
+        }
+
+        >div:first-of-type {
+            width: 90%;
+        }
+
+        >h3 {
+            width: 90%;
+            margin: 1rem auto;
+        }
+    }
+}
+
+@media only screen and (min-width:900px) {
+    .details-page {
+        >div:first-of-type {
+            width: 80%;
+        }
+
+        >h3 {
+            width: 80%;
+        }
+    }
+}
+
+@media only screen and (min-width:1100px) {
+    .details-page {
+        width: 80%;
+
+        .records-list {
+            width: 60%;
+        }
+
+        >div:first-of-type {
+            width: 70%;
+        }
+
+        >h3 {
+            width: 70%;
+            margin: 1rem auto;
+        }
+
+        >div:first-of-type {
+            input {
+                padding:0.2rem 0.5rem;
+            }
+
+            >div select {
+                padding: 0.15rem;
             }
         }
     }
