--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -6,7 +6,8 @@
     color: white;
     background: black;
     width: 90%;
-    padding: 1rem;
+    max-width: 25rem;
+    padding: 1.5rem;
     -webkit-transform: translate(-50%,-50%);
     -moz-transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
